@@ -28,8 +28,7 @@ from conary import metadata
 from conary import versions
 from conary import conarycfg
 from conary.deps import deps
-from conary.repository import shimclient
-from conary.repository.errors import GroupAlreadyExists, PermissionAlreadyExists, InsufficientPermission
+from conary.repository import shimclient, errors
 from conary.repository.netrepos import netserver
 from conary.server import templates
 from conary.web.fields import strFields, intFields, listFields, boolFields
@@ -60,7 +59,7 @@ def checkAuth(write = False, admin = False):
                 # now check for proper permissions
                 if not self.repServer.auth.check(self.authToken, write=write,
                                                  admin=admin):
-                    raise InsufficientPermission
+                    raise errors.InsufficientPermission
 
             return func(self, **kwargs)
         return wrapper
@@ -135,13 +134,13 @@ class HttpHandler(WebHandler):
             output = method(**d)
             self.req.write(output)
             return apache.OK
-        except InsufficientPermission:
+        except errors.InsufficientPermission:
             if auth[0] == "anonymous":
-                # if an anonymous user raises InsufficientPermission,
+                # if an anonymous user raises errors.InsufficientPermission,
                 # ask for a real login.
                 return self._requestAuth()
             else:
-                # if a real user raises InsufficientPermission, forbid access.
+                # if a real user raises errors.InsufficientPermission, forbid access.
                 return apache.HTTP_FORBIDDEN
         except InvalidPassword:
             # if password is invalid, request a new one
@@ -489,7 +488,7 @@ class HttpHandler(WebHandler):
         try:
             self.repServer.addAcl(self.authToken, 0, group, trove, label,
                writeperm, capped, admin)
-        except PermissionAlreadyExists, e:
+        except errors.PermissionAlreadyExists, e:
             return self._write("error", shortError="Duplicate Permission",
                 error = "Permissions have already been set for %s, please go back and select a different User, Label or Trove." % str(e))
 
@@ -508,7 +507,7 @@ class HttpHandler(WebHandler):
         try:
             self.repServer.editAcl(auth, 0, group, oldtrove, oldlabel, trove,
                label, writeperm, capped, admin)
-        except PermissionAlreadyExists, e:
+        except errors.PermissionAlreadyExists, e:
             return self._write("error", shortError="Duplicate Permission",
                 error = "Permissions have already been set for %s, please go back and select a different User, Label or Trove." % str(e))
 
@@ -537,7 +536,7 @@ class HttpHandler(WebHandler):
         if userGroupName != newUserGroupName:
             try:
                 self.repServer.auth.renameGroup(userGroupName, newUserGroupName)
-            except GroupAlreadyExists:
+            except errors.GroupAlreadyExists:
                 return self._write("error", shortError="Invalid Group Name",
                     error = "The group name you have chosen is already in use.")
 
@@ -555,7 +554,7 @@ class HttpHandler(WebHandler):
     def addGroup(self, auth, newUserGroupName, memberList, canMirror):
         try:
             self.repServer.auth.addGroup(newUserGroupName)
-        except GroupAlreadyExists:
+        except errors.GroupAlreadyExists:
             return self._write("error", shortError="Invalid Group Name",
                 error = "The group name you have chosen is already in use.")
 
@@ -625,7 +624,7 @@ class HttpHandler(WebHandler):
 
         if username != self.authToken[0]:
             if not admin:
-                raise InsufficientPermission
+                raise errors.InsufficientPermission
 
         if self.authToken[1] != oldPassword and self.authToken[0] == username and not admin:
             return self._write("error", error = "Error: old password is incorrect")
@@ -706,7 +705,11 @@ class HttpHandler(WebHandler):
     @checkAuth()
     @strFields(entClass = None, entOwner = None, userGroup = None)
     def addEntClass(self, auth, entOwner, userGroup, entClass):
-        self.repServer.auth.addEntitlementGroup(auth, entClass, userGroup)
+        try:
+            self.repServer.auth.addEntitlementGroup(auth, entClass, userGroup)
+        except errors.GroupNotFound:
+            return self._write("error", error="Access group does not exist")
+
         if entOwner != '*none*':
             self.repServer.auth.addEntitlementOwnerAcl(auth, entOwner,
                                                        entClass)
